--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 /* Additional CSS for styling */
 
 body {
-  background-image: url('https://equity_kenya.github.io/equity/ss~2.jpg');
+  background-image: url('https://equity-kenya.github.io/equity/ss~2.jpg');
   background-size: auto 100%; /* Adjust background-size to cover the entire height but allow scrolling horizontally */
   background-repeat: no-repeat;
   background-attachment: fixed;
